--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dhiraj.B",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.17"
